--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,7 +27,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Unit Test
-        run: make test
+        run: go get -v github.com/Masterminds/glide && glide novendor | xargs go test -v
 
       - name: Create cover profile
         run: make coverprofile
