--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,8 +20,14 @@ jobs:
       COMMIT: ${{ github.sha }}
       REPO: user
       GO_VERSION: 1.7.5
+      GOPATH: /home/runner/work/user/go
+      
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+          path: go/src/github.com/microservices-demo/${{ env.REPO }}
+
       - uses: actions/setup-go@v1
         with:
           go-version: ${{ env.GO_VERSION }}
