--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
       COMMIT: ${{ github.sha }}
       REPO: user
       GO_VERSION: 1.7.5
-      GOPATH: /home/runner/work/${{ env.REPO }}/go
+      GOPATH: /home/runner/work/user/go
 
     steps:
       - uses: actions/checkout@v2
