--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,10 +38,10 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Setup PATH
-        run: echo "::add-path::${GOPATH}/bin"
+        run: echo "::add-path::${GOPATH}/bin" && go env
 
       - name: Install dependencies
-        run: pwd && make deps && go get -v github.com/mattn/goveralls
+        run: make deps && go get -v github.com/mattn/goveralls
 
       - name: Unit Tests
         run: glide novendor | xargs go test -v
