re-enabled deps installation

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,16 +40,9 @@ jobs:
       - name: Setup PATH
         run: echo "::add-path::${GOPATH}/bin" && go env
 
-#      - name: Install dependencies
-#        run: make deps && go get -v github.com/mattn/goveralls
-#
-#      - name: Start MongoDB
-#        uses: supercharge/mongodb-github-action@1.3.0
-#        with:
-#          mongodb-version: 3.0
+      - name: Install dependencies
+        run: make deps && go get -v github.com/mattn/goveralls
 
-#      - name: Unit Tests
-#        run: glide novendor | xargs go test -v
       - name: Unit Tests
         run: make test-github
 
