hmm something causes panic cont.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,13 +38,13 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Setup PATH
-        run: echo "::add-path::${GOPATH}/bin" && sudo mkdir -p /data/db
+        run: echo "::add-path::${GOPATH}/bin" && sudo mkdir -p /data/db && ps -ef
 
       - name: Install dependencies
         run: make deps && go get -v github.com/mattn/goveralls
 
       - name: Unit Tests
-        run: glide novendor| xargs go test -v
+        run: pkill -9 mongod && glide novendor| xargs go test -v
 
       - name: Create cover profile
         run: make coverprofile
