--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,13 +38,20 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
 
       - name: Setup PATH
-        run: echo "::add-path::${GOPATH}/bin" && sudo mkdir -p /data/db && ps -ef
+        run: echo "::add-path::${GOPATH}/bin"
 
       - name: Install dependencies
         run: make deps && go get -v github.com/mattn/goveralls
 
+      - name: Install MongoDB
+        run: |
+          wget -qO - https://www.mongodb.org/static/pgp/server-3.6.asc | sudo apt-key add -
+          echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/3.6 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.6.list
+          sudo apt-get update
+          sudo apt-get install -y --allow-downgrades mongodb-org=3.6.20 mongodb-org-server=3.6.20 mongodb-org-shell=3.6.20 mongodb-org-mongos=3.6.20 mongodb-org-tools=3.6.20 || echo "Error is misleading, it was successfully installed"
+
       - name: Unit Tests
-        run: pkill -9 mongod && glide novendor| xargs go test -v
+        run: glide novendor| xargs go test -v
 
       - name: Create cover profile
         run: make coverprofile
