--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: make deps && go get -v github.com/mattn/goveralls
 
-      - name: Install MongoDB
+      - name: Install/Downgrade MongoDB to version 3.6
         run: |
           wget -qO - https://www.mongodb.org/static/pgp/server-3.6.asc | sudo apt-key add -
           echo "deb [ arch=amd64 ] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/3.6 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-3.6.list
@@ -60,7 +60,7 @@ jobs:
         run: make dockertest
 
       - name: Submit Coveralls
-        run: goveralls -coverprofile=cover.profile -service=travis-ci
+        run: goveralls -coverprofile=cover.profile -service=github --jobid=${GITHUB_RUN_ID} --jobnumber=${GITHUB_RUN_NUMBER} --reponame=${REPO}
 
       # Push to dockerhub
       - name: Push user to Docker Hub
