--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,6 +60,8 @@ jobs:
         run: make dockertest
 
       - name: Submit Coveralls
+        env:
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         run: goveralls -coverprofile=cover.profile -service=github --jobid=${GITHUB_RUN_ID} --jobnumber=${GITHUB_RUN_NUMBER} --reponame=${REPO}
 
       # Push to dockerhub
