--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,8 +61,8 @@ jobs:
 
       - name: Submit Coveralls
         env:
-          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-        run: goveralls -coverprofile=cover.profile -service=github --jobid=${GITHUB_RUN_ID} --jobnumber=${GITHUB_RUN_NUMBER} --reponame=${REPO}
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: goveralls -coverprofile=cover.profile -service=github
 
       # Push to dockerhub
       - name: Push user to Docker Hub
